# agent-retention

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/tracking/: history.md  lesson.md  tasks.md
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  grounding.py  llm_client.py  llm_provider.py  pricing.py  prompt.py  single_flight.py  verification.py
apps/api/app/api/: customers.py  dashboard.py  health.py  metrics.py  pitches.py
apps/api/app/core/: budget.py  catalog.py  config.py  logging.py  metrics.py  timeutil.py  tracing.py
apps/api/app/db/: seed.py  session.py
apps/api/app/models/: __init__.py  batch.py  customer.py  pitch.py
apps/api/app/repositories/: __init__.py  batch_repository.py  customer_repository.py  pitch_repository.py
apps/api/app/schemas/: __init__.py  common.py  customer.py  dashboard.py  offer.py  pitch.py  plan.py
apps/api/app/services/: __init__.py  batch_registry.py  bulk_pitch_service.py  customer_service.py  offer_service.py  pitch_service.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_batch_registry.py  test_batch_repository.py  test_budget.py  test_bulk_endpoint.py  test_bulk_pitch_service.py  test_customers.py  test_dashboard.py  test_gemini_client.py  test_grounding.py  test_health.py  test_llm_client.py  test_metrics.py  test_offer_service.py  test_pitch_service.py  test_pitches_endpoint.py  test_tracing.py  test_verification.py
apps/web/: .dockerignore  (+6 more)
deploy/: deploy.sh
docs/: requirements-traceability.md  spec.md  take-home-plan.md
(+47 files in other folders)
